[cs-demo] CSDSidebar - Fix overflow ellipsis and sidebar toggle icon position when sidebars are closed

--- a/cs-ui-demo/src/sass/_csd-sidebar.scss
+++ b/cs-ui-demo/src/sass/_csd-sidebar.scss
@@ -217,7 +217,7 @@
 
 	&.csd-sidebar-toggle-primary:not(.csd-sidebar-toggle-primary-open):not(.csd-sidebar-toggle-secondary-open) {
 		background-color: var(--csd-components-sidebar-bg);
-		top: 1.25rem;
+		top: 1.75rem;
 		left: 1.75rem;
 	}
 
